--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,8 +2,20 @@ tags:
   - nginx-deploy
 substitutions:
   _PROJECT_ID: ${PROJECT_ID}
+  _REPO: https://mygit-647512629680-git.us-central1.sourcemanager.dev/flius-vpc-2/push-deploy-demo.git
 
 steps:
+  - name: gcr.io/cloud-builders/git
+    args:
+      - clone
+      - '${_REPO}'
+      - .
+  - name: gcr.io/cloud-builders/git
+    args:
+      - '-c'
+      - cat README.md
+    entrypoint: /bin/sh
+
 - name: ubuntu
   args:
     - echo
@@ -15,7 +27,8 @@ steps:
   args:
     - '-c'
     - |
-      git clone https://github.com/Leisureroad/push-deploy-demo.git && cd push-deploy-demo
+      #git clone https://github.com/Leisureroad/push-deploy-demo.git && cd push-deploy-demo
+      git clone https://mygit-647512629680-git.us-central1.sourcemanager.dev/flius-vpc-2/push-deploy-demo.git && cd push-deploy-demo
       gcloud container clusters get-credentials l4-demo --region us-central1 --project flius-vpc-2
       sed -i 's|IMAGE_TAG|${_IMAGE_TAG}|g' deployment.yaml
       gcloud beta deploy releases create nginx-${BUILD_ID} \
