--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -17,6 +17,7 @@ steps:
     - '-c'
     - |
       #git clone https://github.com/Leisureroad/push-deploy-demo.git && cd push-deploy-demo
+      git config --global credential.'https://*.*.sourcemanager.dev'.helper gcloud.sh
       git clone https://mygit-647512629680-git.us-central1.sourcemanager.dev/flius-vpc-2/push-deploy-demo.git && cd push-deploy-demo
       gcloud container clusters get-credentials l4-demo --region us-central1 --project flius-vpc-2
       sed -i 's|IMAGE_TAG|${_IMAGE_TAG}|g' deployment.yaml
